# jcode

./: Cargo.toml  README.md
changelog/: index.json  v0.54.4.json  v0.55.0.json
crates/jcode-app-core/: Cargo.toml
crates/jcode-app-core/src/: external_auth.rs  perf.rs  server.rs  session_launch.rs  setup_hints.rs
crates/jcode-base/: Cargo.toml
crates/jcode-base/src/: bus.rs  claude_live.rs  config.rs  config_tests.rs  lib.rs  memory_agent.rs  memory_agent_tests.rs  memory_tests.rs  prompt.rs  prompt_tests.rs  skill.rs  subscription_catalog.rs  terminal_launch.rs
crates/jcode-config-types/src/: lib.rs
crates/jcode-desktop/src/: animation.rs  desktop_worker_process.rs  hero_mask.rs  main.rs  main_tests.rs  single_session.rs  single_session_render.rs  (+1 more)
crates/jcode-notify-email/: Cargo.toml
crates/jcode-scrollwm/: Cargo.toml
crates/jcode-setup-hints/: Cargo.toml
crates/jcode-tui/: Cargo.toml
docs/: COMPILE_PERFORMANCE_PLAN.md  RETENTION_READINESS.md  SPAWN_HOOK.md  WINDOWS.md
docs/scrollwm-integration/: BRIEF.md  CONTRACT.md  PLAN.md
scripts/: analyze_root_crate.py  build_linux_compat.sh  check_panic_budget.py  check_swallowed_error_budget.py  code_size_budget.json  install.ps1  install.sh  panic_budget.json  setup_friction_eval.sh  swallowed_error_budget.json  test_install_conversion.sh  test_size_budget.json  test_windows_setup_evaluation.ps1  uninstall.ps1  uninstall.sh
src/cli/: args.rs  commands.rs  commands_tests.rs  dispatch.rs  startup.rs
src/provider/: anthropic.rs
src/tui/: ui_prepare.rs
telemetry-worker/: package.json
(+166 files in other folders)
